fix spacing issue for mobile screens

--- a/styles/output.css
+++ b/styles/output.css
@@ -3472,6 +3472,11 @@ html {
     font-size: 1.25rem;
     line-height: 1.75rem;
   }
+
+  .sm\:text-lg {
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
 }
 
 @media (min-width: 768px) {
